<resources>
    <string name="app_name">Menus de Navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_lista_productos">Lista Productos</string>
    <string name="home_second">Home Second</string>


    <string name="texto_botton_comprar">Comprar</string>
    <string name="este_producto_es_de_excelente_calidad_recomendado_por_muchos_usuarios_ademas_esta_a_muy_bajo_costo_el_dia_de_hoy_no_desperdicie_esta_oportunidad_es_unica_recuerda_que_si_necesitas_mas_informacion_contactame">Este producto es de excelente calidad, recomendado por muchos usuarios, ademas esta a muy bajo costo el dia de hoy no desperdicie esta oportunidad es unica, recuerda que si necesitas mas informacion, Contactame.</string>
    <string name="descripcion">Descripcion:</string>
    <string name="text_nuevo">Nuevo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_contizar">Cotizar productos</string>
    <string name="menu_control_cuentas">Control de cuentas</string>
    <string name="menu_iniciar_sesion">"Iniciar Sesión "</string>
    <string name="menu_cambiar_cuenta">Cambiar de cuenta</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_verder_producto">Verder Productos</string>
    <string name="Vender_Productos">Vender Productos</string>
    <string name="menu_buscar_producto">Buscar Producto</string>
    <string name="comprar_producto">Comprar Producto</string>
    <string name="texto_botton_confirmar">Confirmar Compra</string>
    <string name="barra_busqueda">Buscar productos...</string>
    <string name="app_label">Local Bussines</string>

    <string-array name="Barrios_veredas">
            <item>El Primitivo Losada</item>
            <item>La Nueva Esperanza</item>
            <item>Betania</item>
            <item>Percador</item>
            <item>Las Aguilas</item>
            <item>Cambis</item>
            <item>CristoRey</item>
    </string-array>

    <string-array name="Metodos_de_Pago">
        <item>Pago presencial</item>
        <item>Tarjeta de Credito</item>
        <item>Nequi</item>
        <item>transferencia desde banco con PSE</item>
        <item>Pago por efecty</item>
    </string-array>

    <string-array name="categoria_producto">
        <item>Comida</item>
        <item>Infromatica</item>
        <item>Electrodomestico</item>
        <item>Decorcion</item>
        <item>Abarrotes</item>
        <item>Estudiantil</item>
    </string-array>

</resources>
