<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item  android:title="@string/menu_contizar">
            <menu>
                <item
                    android:id="@+id/nav_lista_productos"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_lista_productos" />
                <item
                    android:id="@+id/productoVerderActivity"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_verder_producto" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_buscar_producto" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_slideshow" />

            </menu>
        </item>

    </group>

    <item  android:title="@string/menu_control_cuentas">
        <menu>
            <item
                android:id="@+id/nav_loginFragment"
                android:icon="@drawable/ic_comentario"
                android:title="@string/menu_iniciar_sesion" />
            <item
                android:id="@+id/nav_registerFragment"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_cambiar_cuenta" />
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_cerrar_sesion" />
        </menu>
    </item>
</menu>
